--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       </div>
     </div>
     <div class="notes_container">
-      <div class="note_predef" onclick="note_click()">
-        note example
+      <div class="note_predef">
+        <div class="note_name">note name</div>
+        <div class="note_inside">
+          note inside note inside note inside note inside note inside note inside note inside note inside
+        </div>
         <div class="note_close" onclick="note_close()"></div>
       </div>
     </div>
