--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
       <div class="header_text">Remember Me</div>
     </div>
     <div class="bar_container">
-      <div class="add_note" onclick="add_note()">
-        <div class="add_noteStyle"></div>
-        New note
+      <div class="add_note">
+        <img src="/add_FILL0_wght400_GRAD0_opsz48.svg" class="add_noteIcon" />
+        <div class="add_noteText">New note</div>
       </div>
     </div>
     <div class="notes_container">
       <div class="note_predef">
-        <div class="note_name">note name</div>
+        <div class="note_name">
+          note name <img class="note_icon" src="/expand_content_FILL0_wght400_GRAD0_opsz48.svg" alt="" />
+        </div>
         <div class="note_inside">
           note inside note inside note inside note inside note inside note inside note inside note inside
         </div>
-        <div class="note_close" onclick="note_close()"></div>
+        <div class="note_close"></div>
       </div>
     </div>
     <div class="footer">
