--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body class="body">
     <div class="header">
-      <div class="header_menu"></div>
+      <img src="/logo.svg" alt="" />
       <div class="header_text">Remember Me</div>
+      <div class="header_menu"></div>
     </div>
     <div class="bar_container">
       <div class="add_note">
