--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="body">
     <div class="header">
-      <img src="/logo.svg" alt="" />
+      <img class="header_logo" src="/logo.svg" alt="" />
       <div class="header_text">Remember Me</div>
       <div class="header_menu"></div>
     </div>
