--- a/index.html
+++ b/index.html
@@ -9,25 +9,33 @@
   </head>
   <body class="body">
     <div class="header">
-      <img class="header_logo" src="/logo.svg" alt="" />
-      <div class="header_text">Remember Me</div>
-      <div class="header_menu"></div>
-    </div>
-    <div class="bar_container">
-      <div class="add_note">
-        <img src="/add_FILL0_wght400_GRAD0_opsz48.svg" class="add_noteIcon" />
-        <div class="add_noteText">New note</div>
+      <div class="headerMenu"></div>
+      <div style="display: flex; position: absolute; right: 10px">
+        <img class="headerLogo" src="/logo.svg" alt="" />
+        <div class="headerText">Remember Me</div>
       </div>
     </div>
-    <div class="notes_container">
-      <div class="note_predef">
-        <div class="note_name">
-          note name <img class="note_icon" src="/expand_content_FILL0_wght400_GRAD0_opsz48.svg" alt="" />
+    <div class="menuBox">
+      <div class="menuHeader">Remember Me</div>
+      <div class="menuOptions"><img class="menuIcons" src="/home.svg" alt="" /> Home</div>
+      <div class="menuOptions"><img class="menuIcons" src="/settings.svg" alt="" /> Settings</div>
+      <div class="menuOptions"><img class="menuIcons" src="/info.svg" alt="" /> About</div>
+    </div>
+    <div class="barContainer">
+      <div class="addNote">
+        <img src="/add_FILL0_wght400_GRAD0_opsz48.svg" class="addNoteIcon" />
+        <div class="addNoteText">New note</div>
+      </div>
+    </div>
+    <div class="notesContainer">
+      <div class="notePredef">
+        <div class="noteName">
+          note name <img class="noteIcon" src="/expand_content_FILL0_wght400_GRAD0_opsz48.svg" alt="" />
         </div>
-        <div class="note_inside">
+        <div class="noteInside">
           note inside note inside note inside note inside note inside note inside note inside note inside
         </div>
-        <div class="note_close"></div>
+        <div class="noteClose"></div>
       </div>
     </div>
     <div class="footer">
