--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remember Me</title>
     <link rel="stylesheet" href="/styles/styles.css" />
@@ -23,7 +22,7 @@
         <div class="note-desc-def">a</div>
       </div>
     </section>
-    <script src="/scripts/"></script>
-    <script type="module" src="/scripts/firebase.js"></script>
+    <script src="scripts/scripts.js"></script>
+    <script type="module" src="/scripts/firebasetest.js"></script>
   </body>
 </html>
