--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
   <body class="body">
     <header class="header flex-center">
-      <img class="header-icon" src="/img/logo.svg" src="calendar" />
+      <img class="header-icon" src="/img/logo-im.png" src="calendar" />
       <p class="header-title">Remember me</p>
     </header>
-    <section class="control-box to-centerX flex-center">
-      <div class="btn-addNote control-btn-def flex-center">Add Note</div>
-      <div class="btn-addNote control-btn-def flex-center">Select</div>
-    </section>
+    <div class="btn-menu flex-center">
+      <p style="font-size: 9pt; z-index: 1">menu</p>
+      <div class="btn-menu-cover"></div>
+    </div>
+    <div class="sidebar"></div>
     <section class="notes-box to-center">
       <div class="note-style-def flex-left">
         <div class="note-title-def">a</div>
