--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <img class="header-icon" src="/img/logo.png" src="calendar" />
       <p class="header-title">green list</p>
     </header>
-    <div class="btn-menu flex-center">
-      <p style="font-size: 9pt; z-index: 1">menu</p>
-      <div class="btn-menu-cover"></div>
+    <div class="btn-menu btn-menu-normal flex-center">
+      <p class="btn-menu-text" style="font-size: 9pt; z-index: 1">menu</p>
     </div>
     <div class="sidebar flex-top">
       <div class="add-new-note sidebar-icons flex-center" alt="">
