--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remember Me</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <link rel="stylesheet" href="/styles/presets.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/presets.css" />
     <link rel="stylesheet" href="styles/notes.css" />
   </head>
   <body class="body">
@@ -34,6 +34,5 @@
       </div>
     </section>
     <script src="scripts/scripts.js"></script>
-    <script type="module" src="/scripts/firebasetest.js"></script>
   </body>
 </html>
