--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
         <input class="note-desc-def" placeholder="Digite o texto..." />
       </div>
     </section>
+    <div class="blur-background to-center"></div>
+    <div class="confirm-box to-center">
+      <div class="confirm-header flex-right">
+        <p class="confirm-header-title">Concluir</p>
+        <div class="confirm-close-icon flex-center">
+          <img class="close-icon" src="/img/close.svg" alt="close" />
+        </div>
+      </div>
+      <p class="confirm-text flex-top">Concluir tarefa?</p>
+      <div class="btn-confirm-box">
+        <div class="btn-cancel flex-center">Cancelar</div>
+        <div class="btn-confirm flex-center">Concluir</div>
+      </div>
+    </div>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
