--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="body">
     <header class="header flex-center">
       <img class="header-icon" src="/img/logo.png" src="calendar" />
-      <p class="header-title">green list</p>
+      <p class="header-title"></p>
     </header>
     <div class="btn-menu btn-menu-normal flex-center">
       <p class="btn-menu-text" style="font-size: 9pt; z-index: 1">menu</p>
