--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
         <div class="btn-confirm flex-center">Concluir</div>
       </div>
     </div>
+
+    <div class="priority-box to-center">
+      <div class="priority-header flex-right">
+        <p class="priority-header-title">Prioridade</p>
+        <div class="priority-close-icon flex-center">
+          <img class="close-icon" src="/img/close.svg" alt="close" />
+        </div>
+      </div>
+      <p class="priority-text flex-top">Deifinir prioridade</p>
+      <div class="btn-priority-box">
+        <div class="btn-priority-low flex-center">Baixa</div>
+        <div class="btn-priority-medium flex-center">Média</div>
+        <div class="btn-priority-high flex-center">Alta</div>
+      </div>
+    </div>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
