--- a/index.html
+++ b/index.html
@@ -27,26 +27,8 @@
       </div>
     </div>
 
-    <section class="notes-box to-center">
-      <div class="note-style-def flex-left">
-        <div class="note-check flex-center"><img class="note-icon-done" src="/img/done.svg" alt="done" /></div>
-        <input class="note-desc-def" placeholder="Digite o texto..." />
-      </div>
-    </section>
+    <section class="notes-box to-center"></section>
     <div class="blur-background to-center"></div>
-    <div class="confirm-box to-center">
-      <div class="confirm-header flex-right">
-        <p class="confirm-header-title">Concluir</p>
-        <div class="confirm-close-icon flex-center">
-          <img class="close-icon" src="/img/close.svg" alt="close" />
-        </div>
-      </div>
-      <p class="confirm-text flex-top">Concluir tarefa?</p>
-      <div class="btn-confirm-box">
-        <div class="btn-cancel flex-center">Cancelar</div>
-        <div class="btn-confirm flex-center">Concluir</div>
-      </div>
-    </div>
 
     <div class="priority-box to-center">
       <div class="priority-header flex-right">
@@ -55,11 +37,11 @@
           <img class="close-icon" src="/img/close.svg" alt="close" />
         </div>
       </div>
-      <p class="priority-text flex-top">Deifinir prioridade</p>
+      <p class="priority-text to-center">Definir prioridade</p>
       <div class="btn-priority-box">
-        <div class="btn-priority-low flex-center">Baixa</div>
-        <div class="btn-priority-medium flex-center">Média</div>
-        <div class="btn-priority-high flex-center">Alta</div>
+        <div class="btn-priority flex-center">Baixa</div>
+        <div class="btn-priority flex-center">Média</div>
+        <div class="btn-priority flex-center">Alta</div>
       </div>
     </div>
     <script src="scripts/scripts.js"></script>
