--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <div class="blur-background to-center"></div>
 
     <script src="scripts/scripts.js"></script>
-    <script src="database/data.js"></script>
+    <script src="/database/data.js"></script>
   </body>
 </html>
